tests/ui/coloring/barrier_non_uniform.rx
//@ spec: RXS-0068
kernel fn k(t: ThreadCtx<1>) {
    if t.global_id() < 10 {
        t.sync(); //~ ERROR RX3003
    }
}

fn main() {}
